# ghostpipe

./: README.md  pyproject.toml
src/ghostpipe/: __init__.py  pipeline.py
tests/: test_pipeline.py
