[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostpipe"
version = "0.1.0"
description = "Linear pipeline runner with parallel groups, status tracking, and audit trail"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Adam Thomas", email = "adam@ghostlogic.dev" },
]
keywords = ["pipeline", "orchestration", "parallel", "stages", "ghostlogic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maelspine>=0.1.1",
    "ghostseal>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/adam-scott-thomas/ghostpipe"
Repository = "https://github.com/adam-scott-thomas/ghostpipe"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
